refactor getGames to not return strings directly
